fix: added line breaks in css file according to rule 3.5

--- a/style.css
+++ b/style.css
@@ -4,46 +4,59 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header-info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header-info-img {
   width: 100%;
 }
+
 .header-info .info-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header-info { text-align: center;
+
+  .header-info {
+    text-align: center;
+  }
+
 }
-}
+
 .content-add {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .task-wrapper {
   display: flex;
 }
+
 .list {
   margin:0;
   padding: 0px;
 }
+
 .list-style-none {
   list-style:none;
 }
+
 .outline-none{
   outline:none;
 }
+
 .button {
   background: none;
   border: 0px;
@@ -53,9 +66,11 @@
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .button:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .heading {
   color: #333;
@@ -66,6 +81,7 @@
   margin: 0;
   text-transform: uppercase;
 }
+
 .input-text {
   margin: 0;
   font-size: 18px;
@@ -78,6 +94,7 @@
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .input-text:focus {
   color: #333;
 }
@@ -87,6 +104,7 @@
   display: block;
   margin: 0 0 20px;
 }
+
 .input-new-task {
   width: 318px;
 }
@@ -100,6 +118,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .li-item > * {
   vertical-align: middle;
 }
@@ -107,20 +126,24 @@
 .input-checkbox {
   margin: 0 10px;
 }
+
 .li-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .input-text {
   width: 226px
 }
+
 .button-img-del {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .button-img-del:hover {
   transform: rotateZ(0);
 }
